@@ -8,13 +8,11 @@
       Id: <span tal:content="id" />
       <div class="response-info">
         <span i18n:translate="poi_added_by">Added by</span>
-        ...
-        <!--span class="contact-user" 
-              tal:content="python:here.poi_niceName(username=response.Creator())" /-->
+        <span class="contact-user" 
+              tal:content="python:here.poi_niceName(username=response.creator)" />
         <span i18n:translate="poi_added_on">on</span>
-        ...
-        <!--span class="contact-user" 
-              tal:content="python:here.toLocalizedTime(response.Date(), long_format=True)" /-->
+        <span class="contact-user" 
+              tal:content="python:here.toLocalizedTime(response.date, long_format=True)" />
         <div tal:repeat="delta response/changes">
           <span i18n:translate="" tal:content="string:${delta/name}" />:
           <span class="issueChange" i18n:translate="" tal:content="delta/before" /> &rarr; <span class="issueChange" i18n:translate="" tal:content="delta/after" />
